[tmux] zen-mode on per-window basis

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -63,7 +63,8 @@ bind-key -T RESIZE L resize-pane -R 5 \; switch-client -T RESIZE
 
 bind -n C-p last-window
 
-bind z set-option -g status
+# bind z set-option -g status
+bind z set-option status
 
 # Use (almost) Alt-vim keys without prefix key to switch panes
 bind -n M-y select-pane -L
@@ -94,20 +95,24 @@ set-option -g status-bg default
 set-option -g status-fg colour7
 
 setw -g window-status-format '#[fg=colour0,bg=colour7] #W '
+# setw -g window-status-format '#[fg=#fddbce,bg=colour7] #W '
 
 if-shell 'test -n "$SSH_CLIENT"' \
     'setw -g window-status-current-format "#[fg=colour7,bg=colour6] #W "' \
-    'setw -g window-status-current-format "#[fg=colour7,bg=colour4] #W "'
+    'setw -g window-status-current-format "#[fg=#dfdfdf,bg=colour4] #W "'
 # setw -g window-status-current-format '#[fg=#E7E7D8,bg=#2D5C76] #W '
 # setw -g window-status-current-format '#[fg=#E7E7D8,bg=#A15FA9] #W '
 
 set-option -g status-left ''
 # set-option -g status-right '#(~/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 2 -a 0) #(~/bin/tmux_right)'
-set-option -g status-right '#(~/bin/tmux_right)'
-# set-option -g status-right ''
+# set-option -g status-right '#(~/bin/tmux_right)'
+set-option -g status-right ''
+# set-option -g status-right '#(~/bin/crypto-status.sh)'
 
 set-option -g status-right-length 120
 set-option -g status-left-length 40
+
+unbind -T copy-mode-vi MouseDragEnd1Pane
 
 # set -g window-status-current-fg green
 # set -g window-status-current-bg colour0
