--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -114,8 +114,8 @@ wm-restack = bspwm
 monitor = ${env:PRIMARY_MONITOR:eDP1}
 ; monitor = DP1
 ; width = 240
-; width = ${env:XFCE4_PANEL_WIDTH:240}
-width = 312
+width = ${env:XFCE4_PANEL_WIDTH:240}
+; width = 312
 ; width = 266
 height = 2
 offset-x = 0
