--- a/.dockerfiles/tmux/Dockerfile
+++ b/.dockerfiles/tmux/Dockerfile
@@ -1,4 +1,5 @@
-FROM ubuntu:16.04 as build
+# FROM ubuntu:16.04 as build
+FROM ubuntu:18.04 as build
 
 ARG VERSION
 ENV VERSION ${VERSION:-2.8}
@@ -20,11 +21,11 @@ RUN git clone https://github.com/tmux/tmux.git /usr/local/src/tmux && \
     make && \
     make install
 
-FROM ubuntu:16.04
+# FROM ubuntu:16.08
 
-COPY --from=build /usr/local/bin/tmux /usr/local/bin/tmux
-COPY --from=build /usr/local/share/man/man1/tmux.1 /usr/local/share/man/man1/tmux.1
-RUN apt update && apt install -y --no-install-recommends \
-    libevent-2.0-5 \
-    libncurses5 \
-    && rm -rf /var/lib/apt/lists/*
+# COPY --from=build /usr/local/bin/tmux /usr/local/bin/tmux
+# COPY --from=build /usr/local/share/man/man1/tmux.1 /usr/local/share/man/man1/tmux.1
+# RUN apt update && apt install -y --no-install-recommends \
+#     libevent-2.0-5 \
+#     libncurses5 \
+#     && rm -rf /var/lib/apt/lists/*
