[tmux] add J for vim style join-pane

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -63,6 +63,19 @@ bind-key -T RESIZE L resize-pane -R 5 \; switch-client -T RESIZE
 
 bind -n C-p last-window
 
+bind-key J switch-client -T JOIN
+
+bind-key -T JOIN h choose-tree -Z "join-pane -bh -s '%%'"
+bind-key -T JOIN j choose-tree -Z "join-pane -v -s '%%'"
+bind-key -T JOIN k choose-tree -Z "join-pane -bv -s '%%'"
+bind-key -T JOIN l choose-tree -Z "join-pane -h -s '%%'"
+
+# TODO also switch to new pane
+bind-key -T JOIN H choose-tree -Z "join-pane -bh -t '%%'"
+bind-key -T JOIN J choose-tree -Z "join-pane -v -t '%%'"
+bind-key -T JOIN K choose-tree -Z "join-pane -bv -t '%%'"
+bind-key -T JOIN L choose-tree -Z "join-pane -h -t '%%'"
+
 # bind z set-option -g status
 bind z set-option status
 
