[tmux] switch to moved pane

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -65,16 +65,22 @@ bind -n C-p last-window
 
 bind-key J switch-client -T JOIN
 
+# Choose
 bind-key -T JOIN h choose-tree -Z "join-pane -bh -s '%%'"
 bind-key -T JOIN j choose-tree -Z "join-pane -v -s '%%'"
 bind-key -T JOIN k choose-tree -Z "join-pane -bv -s '%%'"
 bind-key -T JOIN l choose-tree -Z "join-pane -h -s '%%'"
 
-# TODO also switch to new pane
-bind-key -T JOIN H choose-tree -Z "join-pane -bh -t '%%'"
-bind-key -T JOIN J choose-tree -Z "join-pane -v -t '%%'"
-bind-key -T JOIN K choose-tree -Z "join-pane -bv -t '%%'"
-bind-key -T JOIN L choose-tree -Z "join-pane -h -t '%%'"
+# bind-key -T JOIN H choose-tree -Z "join-pane -bh -t '%%'"
+# bind-key -T JOIN J choose-tree -Z "join-pane -v -t '%%'"
+# bind-key -T JOIN K choose-tree -Z "join-pane -bv -t '%%'"
+# bind-key -T JOIN L choose-tree -Z "join-pane -h -t '%%'"
+# also switch to new pane
+# NOTE ejects you if you move last pane in session (even though another session exists?)
+bind-key -T JOIN H choose-tree -Z "run-shell \"~/.config/tmux/join-pane-to-target-and-switch.sh -bh '%%'\""
+bind-key -T JOIN J choose-tree -Z "run-shell \"~/.config/tmux/join-pane-to-target-and-switch.sh -v '%%'\""
+bind-key -T JOIN K choose-tree -Z "run-shell \"~/.config/tmux/join-pane-to-target-and-switch.sh -bv '%%'\""
+bind-key -T JOIN L choose-tree -Z "run-shell \"~/.config/tmux/join-pane-to-target-and-switch.sh -h '%%'\""
 
 # bind z set-option -g status
 bind z set-option status
