[tmux] add RUNPANE

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -92,6 +92,12 @@ bind -n M-i select-pane -U
 bind -n M-o select-pane -R
 bind r source-file ~/.tmux.conf
 
+bind-key R switch-client -T RUNPANE
+bind-key -T RUNPANE h split-window -bh 'TMUX_PROMPT=1 DIR=bh zsh'
+bind-key -T RUNPANE j split-window -v 'TMUX_PROMPT=1 DIR=v zsh'
+bind-key -T RUNPANE k split-window -bv 'TMUX_PROMPT=1 DIR=bv zsh'
+bind-key -T RUNPANE l split-window -h 'TMUX_PROMPT=1 DIR=h zsh'
+
 # to enable mouse scroll, see https://github.com/tmux/tmux/issues/145#issuecomment-150736967
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 
