[tmux] update ssh active window fg

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -123,7 +123,7 @@ setw -g window-status-format '#[fg=colour0,bg=colour7] #W '
 # setw -g window-status-format '#[fg=#fddbce,bg=colour7] #W '
 
 if-shell 'test -n "$SSH_CLIENT"' \
-    'setw -g window-status-current-format "#[fg=colour7,bg=colour6] #W "' \
+    'setw -g window-status-current-format "#[fg=#ffffff,bg=colour6] #W "' \
     'setw -g window-status-current-format "#[fg=#dfdfdf,bg=colour4] #W "'
 # setw -g window-status-current-format '#[fg=#E7E7D8,bg=#2D5C76] #W '
 # setw -g window-status-current-format '#[fg=#E7E7D8,bg=#A15FA9] #W '
