changes from console-84b69c8754-wd7jk container

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,12 @@
 # Change prefix if not on ssh
 if-shell 'test -z "$SSH_CLIENT"' 'unbind C-b; set-option -g prefix C-a'
 
+# unbind C-b
+# set-option -g prefix C-z
+
+bind-key a send-keys C-a
+
+
 bind-key -n C-x send-keys C-b
 
 set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
@@ -41,7 +47,8 @@ bind-key > swap-window -t :+
 bind b split-window -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
-bind s choose-session
+# bind s choose-session
+bind-key s choose-tree -Zs
 bind t  setw automatic-rename
 
 bind h select-pane -L
@@ -82,14 +89,29 @@ bind-key -T JOIN J choose-tree -Z "run-shell \"~/.config/tmux/join-pane-to-targe
 bind-key -T JOIN K choose-tree -Z "run-shell \"~/.config/tmux/join-pane-to-target-and-switch.sh -bv '%%'\""
 bind-key -T JOIN L choose-tree -Z "run-shell \"~/.config/tmux/join-pane-to-target-and-switch.sh -h '%%'\""
 
+bind-key M switch-client -T MOVE
+# Move current pane within same window
+bind-key -T MOVE h choose-tree -Z "move-pane -bh -t '%%'"
+bind-key -T MOVE j choose-tree -Z "move-pane -v -t '%%'"
+bind-key -T MOVE k choose-tree -Z "move-pane -bv -t '%%'"
+bind-key -T MOVE l choose-tree -Z "move-pane -h -t '%%'"
+
 # bind z set-option -g status
 bind z set-option status
 
 # Use (almost) Alt-vim keys without prefix key to switch panes
+# NOTE map alt to esc in Blink Shell for this to work
 bind -n M-y select-pane -L
 bind -n M-u select-pane -D
 bind -n M-i select-pane -U
 bind -n M-o select-pane -R
+
+# Literal M-x keys on ipad keyboard in blink with alt not mapped to ESC
+# bind -n ˙ select-pane -L
+# bind -n ∆ select-pane -D
+# bind -n ˚ select-pane -U
+# bind -n ¬ select-pane -R
+
 bind r source-file ~/.tmux.conf
 
 bind-key R switch-client -T RUNPANE
@@ -119,19 +141,24 @@ set -g status-interval 2
 set-option -g status-bg default
 set-option -g status-fg colour7
 
-setw -g window-status-format '#[fg=colour0,bg=colour7] #W '
+setw -g window-status-format '#(~/.config/tmux/window-status-current-format.sh)'
+setw -g window-status-current-format '#[italics] #(~/.config/tmux/window-status-current-format.sh)'
 # setw -g window-status-format '#[fg=#fddbce,bg=colour7] #W '
 
-if-shell 'test -n "$SSH_CLIENT"' \
-    'setw -g window-status-current-format "#[fg=#ffffff,bg=colour6] #W "' \
-    'setw -g window-status-current-format "#[fg=#dfdfdf,bg=colour4] #W "'
+# if-shell 'test -n "$SSH_CLIENT"' \
+#     'setw -g window-status-current-format "#[fg=colour0,bg=colour6] #{window_index} #W #P #(hostname)"' \
+#     'setw -g window-status-current-format "#[fg=#dfdfdf,bg=colour4] #W "'
 # setw -g window-status-current-format '#[fg=#E7E7D8,bg=#2D5C76] #W '
 # setw -g window-status-current-format '#[fg=#E7E7D8,bg=#A15FA9] #W '
 
-set-option -g status-left ''
+# set-option -g status-left '#[bg=red][#{session_name}]#[bg=blue] '
+set-option -g status-left '[#{session_name}] '
+# set-option -g status-left-style 'bg=red,italics'
 # set-option -g status-right '#(~/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 2 -a 0) #(~/bin/tmux_right)'
 # set-option -g status-right '#(~/bin/tmux_right)'
-set-option -g status-right ''
+# set-option -g status-right "#{host} #(hostname) #{?client_prefix,prefix,noprefix}"
+set-option -g status-right "#(~/tmux-status.sh)"
+# set-option -g status-right ''
 # set-option -g status-right '#(~/bin/crypto-status.sh)'
 
 set-option -g status-right-length 120
@@ -143,9 +170,11 @@ unbind -T copy-mode-vi MouseDragEnd1Pane
 # set -g window-status-current-bg colour0
 
 # Plugins
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'thewtex/tmux-mem-cpu-load'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'thewtex/tmux-mem-cpu-load'
 
 # TMUX Plugin Manager
 run '~/.tmux/plugins/tpm/tpm'
+
+# command-prompt -I ubuntu,66.70.222.104 -p user,host "split-window ssh %1@%2"
