[gitpod] add curl

--- a/.config/gitpod/Dockerfile
+++ b/.config/gitpod/Dockerfile
@@ -1,12 +1,12 @@
-# cannot copy over 'gitpod-layer' because debian vs ubuntu?
 FROM ubuntu:18.04
 
 RUN apt update \
     && apt install -y --no-install-recommends \
     sudo \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
-# 33333 hardcoded by Gitpod?
+# Both username 'gitpod' and uid 33333 appear to be required
 RUN useradd \
     # --no-log-init \
     --uid 33333 \
@@ -16,3 +16,5 @@ RUN useradd \
     --shell /bin/bash \
     gitpod \
     && sed -i.bkp -e 's/%sudo\s\+ALL=(ALL\(:ALL\)\?)\s\+ALL/%sudo ALL=NOPASSWD:ALL/g' /etc/sudoers
+
+# Gitpod adds cacerts?
