--- a/.config/gitpod/Dockerfile
+++ b/.config/gitpod/Dockerfile
@@ -4,6 +4,7 @@ RUN apt update \
     && apt install -y --no-install-recommends \
     sudo \
     curl \
+    ca-certs \
     gnupg2 \
     && rm -rf /var/lib/apt/lists/*
 
