[gitpod] cacerts -> ca-certificates

--- a/.config/gitpod/Dockerfile
+++ b/.config/gitpod/Dockerfile
@@ -4,7 +4,7 @@ RUN apt update \
     && apt install -y --no-install-recommends \
     sudo \
     curl \
-    cacerts \
+    ca-certificates \
     gnupg2 \
     && rm -rf /var/lib/apt/lists/*
 
