[gitpod] try https for nix install url to handle curle_url_malformat (3)

--- a/.config/gitpod/Dockerfile
+++ b/.config/gitpod/Dockerfile
@@ -22,8 +22,8 @@ RUN useradd \
 # env as well? arg?
 LABEL nix_version=2.2.1
 RUN mkdir /opt/nix \
-    && curl -fsSL nixos.org/nix/install /opt/nix/install-nix-2.2.1 \
-    && curl -fsSL nixos.org/nix/install.sig /opt/nix/install-nix-2.2.1.sig \
+    && curl -fsS https://nixos.org/nix/install /opt/nix/install-nix-2.2.1 \
+    && curl -fsS https://nixos.org/nix/install.sig /opt/nix/install-nix-2.2.1.sig \
     && gpg2 --recv-keys B541D55301270E0BCF15CA5D8170B4726D7198DE \
     && gpg2 --verify /opt/nix/install-nix-2.2.1.sig
 
