[gitpod] give up on nix install within unprivileged container, add ansible 2.7.5 via venv

--- a/.config/gitpod/Dockerfile
+++ b/.config/gitpod/Dockerfile
@@ -6,6 +6,10 @@ RUN apt update \
     curl \
     ca-certificates \
     gnupg2 \
+    python3 python3-dev python3-venv \
+    build-essential \
+    libffi-dev \
+    libssl-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Both username 'gitpod' and uid 33333 appear to be required
@@ -19,20 +23,23 @@ RUN useradd \
     gitpod \
     && sed -i.bkp -e 's/%sudo\s\+ALL=(ALL\(:ALL\)\?)\s\+ALL/%sudo ALL=NOPASSWD:ALL/g' /etc/sudoers
 
+RUN python3 -m venv /root/.venvs/ansible \
+    && sh -c "source /root/.venvs/ansible/bin/activate && pip install ansible==2.7.5"
+
 # env as well? arg?
 # TODO verify sha256sum
-LABEL nix_version=2.2.1
-RUN mkdir /opt/nix \
-    && curl -fsSL nixos.org/releases/nix/nix-2.2.1/install -o /opt/nix/install-nix-2.2.1 \
-    && curl -fsSL nixos.org/releases/nix/nix-2.2.1/install.asc -o /opt/nix/install-nix-2.2.1.asc \
-    && gpg2 --recv-keys B541D55301270E0BCF15CA5D8170B4726D7198DE \
-    && gpg2 --verify /opt/nix/install-nix-2.2.1.asc
+# LABEL nix_version=2.2.1
+# RUN mkdir /opt/nix \
+#     && curl -fsSL nixos.org/releases/nix/nix-2.2.1/install -o /opt/nix/install-nix-2.2.1 \
+#     && curl -fsSL nixos.org/releases/nix/nix-2.2.1/install.asc -o /opt/nix/install-nix-2.2.1.asc \
+#     && gpg2 --recv-keys B541D55301270E0BCF15CA5D8170B4726D7198DE \
+#     && gpg2 --verify /opt/nix/install-nix-2.2.1.asc
 
-USER gitpod
-ENV USER gitpod
-RUN sh /opt/nix/install-nix-2.2.1
+# USER gitpod
+# ENV USER gitpod
+# RUN sh /opt/nix/install-nix-2.2.1
 
 
-USER root
+# USER root
 
 # Gitpod layer adds cacerts?
