--- a/.config/Brewfile
+++ b/.config/Brewfile
@@ -1,26 +1,45 @@
-tap 'homebrew/cask'
-tap 'homebrew/cask-drivers'
-tap 'homebrew/cask-fonts'
-tap 'homebrew/cask-versions'
-tap 'homebrew/core'
+tap "argoproj/tap"
+tap "boz/repo"
+tap "derailed/k9s"
+tap "getantibody/tap"
+tap "homebrew/bundle"
+tap "homebrew/cask"
+tap "homebrew/cask-drivers"
+tap "homebrew/cask-fonts"
+tap "homebrew/cask-versions"
+tap "homebrew/core"
+tap "homebrew/services"
+tap "koekeishiya/formulae"
 
-cask 'visual-studio-code'
-cask 'scroll-reverser'
-cask 'bettertouchtool'
-cask 'google-cloud-sdk'
-cask 'neo4j'
+cask "bettertouchtool"
+cask "google-cloud-sdk"
+cask "scroll-reverser"
+cask "visual-studio-code"
 
-brew 'mas'
-brew 'jq'
-brew 'bat'
-brew 'getantibody/tap/antibody'
-brew 'zsh'
-brew 'git'
-brew 'tmux'
-brew 'neovim'
-brew 'reattach-to-user-namespace'
-brew 'htop'
-brew 'ctop'
-brew 'gettext'
+brew "bat"
+brew "ctop"
+brew "dfu-programmer"
+brew "git"
+brew "go"
+brew "htop"
+brew "jq"
+brew "kubectx"
+brew "mas"
+brew "neovim"
+brew "pkg-config"
+brew "protobuf"
+brew "reattach-to-user-namespace"
+brew "step"
+brew "telnet"
+brew "tmux"
+brew "tree"
+brew "youtube-dl"
+brew "zeromq"
+brew "zsh"
+brew "boz/repo/kail"
+brew "derailed/k9s/k9s"
+brew "getantibody/tap/antibody"
+brew "koekeishiya/formulae/skhd"
+brew "koekeishiya/formulae/yabai"
 
 mas "Bear", id: 1091189122
