--- a/.config/Brewfile
+++ b/.config/Brewfile
@@ -11,10 +11,18 @@ tap "homebrew/core"
 tap "homebrew/services"
 tap "koekeishiya/formulae"
 
+cask "iterm2"
+cask "google-chrome"
+cask "firefox"
 cask "bettertouchtool"
 cask "google-cloud-sdk"
 cask "scroll-reverser"
 cask "visual-studio-code"
+cask "karabiner-elements"
+cask "docker"
+cask "omnigraffle"
+cask "discord"
+cask "spotify"
 
 brew "bat"
 brew "ctop"
