--- a/.tmux.conf
+++ b/.tmux.conf
@@ -106,7 +106,7 @@ bind-key -Tcopy-mode-vi 'y' send -X copy-selection
 if-shell "test `uname` = Linux" 'bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"'
 if-shell "test `uname` = Linux" 'bind-key p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"'
 
-if-shell "test -f /usr/local/bin/reattach-to-user-namespace" 'bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"'
+# if-shell "test -f /usr/local/bin/reattach-to-user-namespace" 'bind-key -T vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"'
 # Mouse copy
 # bind-key -t vi-copy mousedragend1pane copy-pipe "reattach-to-user-namespace pbcopy"
 # bind-key -t vi-copy MouseUp1Pane copy-pipe "reattach-to-user-namespace pbcopy"
@@ -131,7 +131,7 @@ if-shell 'test -n "$SSH_CLIENT"' \
 set-option -g status-left ''
 # set-option -g status-right '#(~/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 2 -a 0) #(~/bin/tmux_right)'
 # set-option -g status-right '#(~/bin/tmux_right)'
-set-option -g status-right ''
+set-option -g status-right '#(kubectx -c):#(kubens -c)'
 # set-option -g status-right '#(~/bin/crypto-status.sh)'
 
 set-option -g status-right-length 120
